--- a/src/app/shell/shell.component.html
+++ b/src/app/shell/shell.component.html
@@ -1,11 +1,33 @@
-<header class="header">
-  <div class="container header__container">
-    <h1>siemano</h1>
-  </div>
-</header>
-
-<main class="main">
-  <div class="container main__container">
-    <router-outlet></router-outlet>
-  </div>
-</main>
+<mat-toolbar color="primary">
+  <header class="header">
+    <button
+      type="button"
+      aria-label="Toggle sidenav"
+      mat-icon-button
+      (click)="drawer.toggle()"
+      *ngIf="isHandset$ | async">
+      <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+    </button>
+    <h1 class="title" [class.mobile]="isHandset$ | async">
+      Make me LOUDA
+      <mat-icon aria-hidden="false" aria-label="Example home icon" color="accent"
+        >favorite</mat-icon
+      >
+    </h1>
+  </header>
+</mat-toolbar>
+<mat-sidenav-container class="sidenav-container" [class.mobile]="isHandset$ | async">
+  <mat-sidenav
+    #drawer
+    class="sidenav"
+    [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    [mode]="(isHandset$ | async) ? 'push' : 'side'"
+    [opened]="(isHandset$ | async) === false">
+    <mat-toolbar>Menu</mat-toolbar>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <main class="main">
+      <router-outlet></router-outlet>
+    </main>
+  </mat-sidenav-content>
+</mat-sidenav-container>
