feat: add login panel

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,1 +1,15 @@
-<p>auth works!</p>
+<mat-card class="login">
+  <mat-card-header>
+    <header class="login__header">
+      <mat-card-title>Zrób mi LOUDA</mat-card-title>
+      <mat-card-subtitle>zaloguj się</mat-card-subtitle>
+    </header>
+  </mat-card-header>
+  <mat-card-content>
+    <form class="login__form">
+      <mat-form-field appearance="standard"></mat-form-field>
+      <mat-form-field appearance="standard"></mat-form-field>
+      <button mat-raised-button color="primary">zaloguj</button>
+    </form>
+  </mat-card-content>
+</mat-card>
