--- a/src/app/shell/shell.component.scss
+++ b/src/app/shell/shell.component.scss
@@ -39,3 +39,16 @@
     letter-spacing: 0;
   }
 }
+
+.btn {
+  display: block;
+
+  &.mobile {
+    display: none;
+  }
+}
+
+.center {
+  display: block;
+  margin: 0 auto;
+}
