--- a/src/app/shared/content-wrapper/content-wrapper.component.html
+++ b/src/app/shared/content-wrapper/content-wrapper.component.html
@@ -1,5 +1,5 @@
 <div>
   <h1 class="title" [class.mobile]="isHandset$ | async">{{ title }}</h1>
-  <mat-divider></mat-divider>
+  <mat-divider class="divider"></mat-divider>
   <ng-content></ng-content>
 </div>
