--- a/src/app/features/products-list/products-list.component.html
+++ b/src/app/features/products-list/products-list.component.html
@@ -9,14 +9,14 @@
 
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Nazwa</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.name.name }}</td>
       </ng-container>
 
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Akcje</th>
         <td mat-cell *matCellDef="let element">
           <button mat-stroked-button color="primary">Edytuj</button>
-          <button mat-raised-button color="warn">Usuń</button>
+          <button mat-raised-button color="warn" (click)="deleteProducts(element.key)">Usuń</button>
         </td>
       </ng-container>
 
