feat: change name of column in UnitsList compent
From Data to Name

--- a/src/app/features/units-list/units-list.component.html
+++ b/src/app/features/units-list/units-list.component.html
@@ -8,7 +8,7 @@
       </ng-container>
 
       <ng-container matColumnDef="data">
-        <th mat-header-cell *matHeaderCellDef>Dane</th>
+        <th mat-header-cell *matHeaderCellDef>Nazwa</th>
         <td mat-cell *matCellDef="let element">{{ element.data.unit }}</td>
       </ng-container>
 
