--- a/src/app/shell/shell.component.scss
+++ b/src/app/shell/shell.component.scss
@@ -52,3 +52,21 @@
   display: block;
   margin: 0 auto;
 }
+
+.menu {
+  &__header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+    white-space: normal;
+  }
+
+  &__text {
+    font-size: 1.2rem;
+
+    &--bold {
+      font-weight: 700;
+    }
+  }
+}
