feat: handle display role-based navigation

--- a/src/app/shell/shell.component.html
+++ b/src/app/shell/shell.component.html
@@ -38,6 +38,7 @@
       <p class="menu__text">Zalogowano jako</p>
       <span class="menu__text menu__text--bold">{{ user.role }}</span>
     </div>
+    <mat-divider></mat-divider>
     <app-navigation></app-navigation>
     <button
       mat-raised-button
