--- a/src/app/shell/navigation/navigation.component.html
+++ b/src/app/shell/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <mat-nav-list *ngIf="user$ | async as user">
   <ng-container *ngFor="let item of navItems">
-    <ng-container *ngIf="item.role === user.role">
+    <ng-container *ngIf="item.role === user.data.role">
       <a [routerLink]="item.path" mat-list-item>{{ item.name }}</a>
       <mat-divider></mat-divider>
     </ng-container>
