--- a/src/app/features/favorite-list/favorite-list.component.html
+++ b/src/app/features/favorite-list/favorite-list.component.html
@@ -1,5 +1,28 @@
 <app-content-wrapper title="Lista ulubionych smaków">
   <ng-container *ngIf="user$ | async as user">
+    <ng-container *ngIf="user.data.favoriteIceCream; else noresult">
+      <table mat-table [dataSource]="user.data.favoriteIceCream" class="mat-elevation-z8">
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef>Lp.</th>
+          <td mat-cell *matCellDef="let element; let idx = index">{{ idx + 1 }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Ulubione smaki</th>
+          <td mat-cell *matCellDef="let element">{{ element }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef>Akcje</th>
+          <td mat-cell *matCellDef="let element"></td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+      <p *ngIf="!user.data?.favoriteIceCream.length">brak danych</p>
+    </ng-container>
+
     <ng-container *ngIf="dataSource$ | async as data">
       <table mat-table [dataSource]="data" class="mat-elevation-z8">
         <ng-container matColumnDef="position">
@@ -8,7 +31,7 @@
         </ng-container>
 
         <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>Nazwa</th>
+          <th mat-header-cell *matHeaderCellDef>Dostępne smaki</th>
           <td mat-cell *matCellDef="let element">{{ element.name.name }}</td>
         </ng-container>
 
@@ -16,12 +39,16 @@
           <th mat-header-cell *matHeaderCellDef>Akcje</th>
           <td mat-cell *matCellDef="let element">
             <button
-              mat-stroked-button
+              mat-mini-fab
               color="accent"
+              aria-label="Example icon button with a plus one icon"
+              [disabled]="
+                user.data.favoriteIceCream && user.data.favoriteIceCream.includes(element.name.name)
+              "
               (click)="
                 addProductsToFavorite(user.key, user.data.favoriteIceCream, element.name.name)
               ">
-              Dodaj do ulubionych
+              <mat-icon>favorite</mat-icon>
             </button>
           </td>
         </ng-container>
@@ -33,3 +60,7 @@
     </ng-container>
   </ng-container>
 </app-content-wrapper>
+
+<ng-template #noresult>
+  <p>NIE MASZ ŻADNYCH ULUBIONYCH SMAKÓW!</p>
+</ng-template>
