--- a/src/app/features/products-list/products-list.component.html
+++ b/src/app/features/products-list/products-list.component.html
@@ -9,7 +9,7 @@
 
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Nazwa</th>
-        <td mat-cell *matCellDef="let element">{{ element.name.name }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.data.name }}</td>
       </ng-container>
 
       <ng-container matColumnDef="action">
