--- a/src/app/features/new-order/new-order.component.scss
+++ b/src/app/features/new-order/new-order.component.scss
@@ -1,3 +1,12 @@
-:host {
-  display: block;
+.input-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 3rem;
+
+  @media screen and (orientation: landscape) {
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 2rem;
+  }
 }
