--- a/src/app/shell/navigation/navigation.component.html
+++ b/src/app/shell/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <mat-nav-list *ngIf="user$ | async as user">
   <ng-container *ngFor="let item of navItems">
     <ng-container *ngIf="item.role === user.data.role">
-      <a [routerLink]="item.path" mat-list-item>{{ item.name }}</a>
+      <a [routerLink]="item.path" routerLinkActive="active" mat-list-item>{{ item.name }}</a>
       <mat-divider></mat-divider>
     </ng-container>
   </ng-container>
