--- a/src/app/features/get-order/get-order.component.html
+++ b/src/app/features/get-order/get-order.component.html
@@ -1,1 +1,35 @@
-<app-content-wrapper title="Pobierz zamówienia"></app-content-wrapper>
+<app-content-wrapper title="Pobierz zamówienia">
+  <h2>Pokaż dziesiejsze zamówienia ({{ todayDay }}):</h2>
+  <button mat-raised-button color="primary" (click)="getOrders()">smak + ilość</button>
+  <button mat-raised-button color="primary" (click)="getOrdersByClients()">klient</button>
+  <ng-container *ngIf="toggleTable === 'ORDERS'">
+    <ng-container *ngIf="orders$ | async as data">
+      <table mat-table [dataSource]="data" class="mat-elevation-z8">
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef>Lp.</th>
+          <td mat-cell *matCellDef="let element; let idx = index">{{ idx + 1 }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="product">
+          <th mat-header-cell *matHeaderCellDef>Nazwa</th>
+          <td mat-cell *matCellDef="let element">{{ element.product }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="unit">
+          <th mat-header-cell *matHeaderCellDef>Jednostka</th>
+          <td mat-cell *matCellDef="let element">{{ element.unit }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="count">
+          <th mat-header-cell *matHeaderCellDef>Ilość</th>
+          <td mat-cell *matCellDef="let element">{{ element.count }}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </ng-container>
+  </ng-container>
+
+  <ng-container *ngIf="toggleTable === 'CLIENT'">table by client</ng-container>
+</app-content-wrapper>
