--- a/src/app/features/get-order/get-order.component.html
+++ b/src/app/features/get-order/get-order.component.html
@@ -33,5 +33,37 @@
     </ng-container>
   </ng-container>
 
-  <ng-container *ngIf="toggleTable === 'CLIENT'">table by client</ng-container>
+  <ng-container *ngIf="toggleTable === 'CLIENT'">
+    <ng-container *ngIf="ordersByClient$ | async as data">
+      <ng-container *ngFor="let user of data">
+        <h3 class="title">Zamówienie dla {{ user.email }}</h3>
+        <table mat-table [dataSource]="user.order" class="mat-elevation-z8">
+          <ng-container matColumnDef="position">
+            <th mat-header-cell *matHeaderCellDef>Lp.</th>
+            <td mat-cell *matCellDef="let element; let idx = index">{{ idx + 1 }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="product">
+            <th mat-header-cell *matHeaderCellDef>Nazwa</th>
+            <td mat-cell *matCellDef="let element">{{ element.product }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="unit">
+            <th mat-header-cell *matHeaderCellDef>Jednostka</th>
+            <td mat-cell *matCellDef="let element">{{ element.unit }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="count">
+            <th mat-header-cell *matHeaderCellDef>Ilość</th>
+            <td mat-cell *matCellDef="let element">{{ element.count }}</td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+      </ng-container>
+
+      <ng-container *ngIf="!data.length">brak zamówień</ng-container>
+    </ng-container>
+  </ng-container>
 </app-content-wrapper>
