--- a/src/app/features/get-order/get-order.component.scss
+++ b/src/app/features/get-order/get-order.component.scss
@@ -1,3 +1,15 @@
 table {
   width: 100%;
 }
+
+td {
+  font-size: 0.7rem;
+
+  @media screen and (min-width: 800px) {
+    font-size: 1rem;
+  }
+}
+
+.title {
+  margin: 1rem 0 0;
+}
