--- a/src/app/features/get-order/get-order.component.html
+++ b/src/app/features/get-order/get-order.component.html
@@ -34,7 +34,7 @@
   </ng-container>
 
   <ng-container *ngIf="toggleTable === 'CLIENT'">
-    <ng-container *ngIf="ordersByClient$ | async as data">
+    <ng-container *ngIf="orders$ | async as data">
       <ng-container *ngFor="let user of data">
         <h3 class="title">Zamówienie dla {{ user.email }}</h3>
         <table mat-table [dataSource]="user.order" class="mat-elevation-z8">
@@ -62,7 +62,6 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
       </ng-container>
-
       <ng-container *ngIf="!data.length">brak zamówień</ng-container>
     </ng-container>
   </ng-container>
