--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,7 +1,7 @@
 <mat-card class="login">
   <mat-card-header>
     <header class="login__header">
-      <mat-card-title>Zrób mi LOUDA</mat-card-title>
+      <mat-card-title>Make me LOUDA</mat-card-title>
       <mat-card-subtitle>zaloguj się</mat-card-subtitle>
     </header>
   </mat-card-header>
